		- Effects of anti-magic field should be now noticeable and it will affect also monsters (from Sporkhack)
	* Object generation modified 
		- lowered amount of death drops
		- more objects on the floor
		- generated objects may be eroded or fixed
		- reduced amount of food on lower levels
	* Poison gas blasts leave a trail of stinking clouds (based on http://l.j-factor.com/nethack/poisoncloud.diff by "L" - Leon Arnott)
	* Assorted YAFMs 1.0 by Adam Borowski ( http://bilious.alt.org/?121 ), slightly modified
	* Cursed musical instruments will work only in 50% of cases, blessed ones are more effective
	* More interesting monsters on wizard quest (for example vampires)
	* Improved Beartraps 1.0 by Malcolm Ryan ( http://bilious.alt.org/?143 )
	* Better zoos and courtrooms by "L" (Leon Arnott) ( http://l.j-factor.com/nethack/mkroom.diff )
	* Blessed dunce caps and helms of opposite alignment will unbless (instead of turning into cursed) when worn by a player, based on http://l.j-factor.com/nethack/c-dunce.diff (by "L" - Leon Arnott)
	* Base bribe is higher for soldiers but no longer based on visible gold, it is now possible to bribe watch, work by "L" (Leon Arnott), slightly modified ( http://l.j-factor.com/nethack/bribe.diff ).
	* Light is classified as matter spell type, not divination (affects only new games)
	* Partly eaten corpses are worthless for sacrificing
	* Potion of water used against iron golems are more effective
	* Killing via scroll of genocide counts as direct act of player (penalties for killing pets/peacefuls, breaks pacifist conduct, experience/alignment points are gained)
	* God angered by altar conversion will send entire army of minions
	* You really should be careful during new moon.
	* Land mine and beartrap objects are lightier
	* Boss type monsters may have ascension kit type items (amulet of reflection)
	* Player monsters may appear before Astral Plane
	* New big room variant
