@@ -1105,11 +1105,8 @@ dopois:
 		}
 		/* adjattrib gives dunce cap message when appropriate */
 		(void) adjattrib(A_INT, -rnd(2), FALSE);
-		/*  only Cthulhu makes you amnesiac */
-		if (mtmp->data == &mons[PM_CTHULHU]) {
-			forget_levels(25);	/* lose memory of 25% of levels */
-			forget_objects(25);	/* lose memory of 25% of objects */
-		}
+		forget_skills();
+		forget_spells();
 		exercise(A_WIS, FALSE);
 		break;
 	    case AD_PLYS:
